# sbq-dq-simulator

./: .coveragerc  README.md  mypy.ini  pyproject.toml  rename.sh
.github/: CODEOWNERS
bff_experiment/: data_processing_functions.py  extract_inner_product_peaks.py  figure7.py  figure7b.py  figure7cdef.py  inner_product_exp_functions.py  invert_data_multiple_guesses.py
bff_experiment/data/: voltages.txt  (+3 more)
bff_paper_figures/: Figure3.py  Figure4_inner_product.py  Figure5_inversion.py  Figure6_robustness.py  double_inner_product_inversion_example.py  extract_experiment_values.py  figure3_dq_fft.py  fit_inner_product_vs_ramsey.py  fitting_routines.py  imshow_extensions.py  inner_product_functions.py  inversions.py  robustness_vs_mw_angle.py  robustness_vs_mw_magnitude.py  shared_parameters.py  simulate_and_invert_helper_functions.py  simulate_and_invert_vs_b_angle.py  simulate_and_invert_vs_b_mag.py  simulation_helper_functions.py
bff_simulator/: constants.py  experiment_parameters.py  geometric_experiment_parameters.py  geometric_solver.py  geometric_solver_parameters.py  geometric_unitary_solver.py  homogeneous_ensemble.py  liouvillian_constructor.py  liouvillian_solver.py  master_equation_solver.py  offaxis_field_experiment_parameters.py  offaxis_field_hamiltonian_constructor.py  offaxis_field_solver.py  offaxis_field_solver_parameters.py  propagator_manipulation.py  simulation_serialization.py  simulator.py  solver_parameters.py  superoperator_to_matrix_functions.py  unitary_solver.py  vector_manipulation.py
tests/: test_coordinate_transformation.py  test_liouvillian_solver.py  test_offaxis_field_hamiltonian_constructor.py  test_offaxis_field_solver.py  test_solver_comparison.py
(+48 files in other folders)
