[project]
name = "bff-simulator"
version = "0.1.0"
description = "Python scripts to simulate Double-Quantum experiments"
authors = [{name = "SBQuantum"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.0.0",
    "scipy>=1.15.2",
    "qutip==5.0.4",
    "pandas>=2.2.3",
]

[dependency-groups]
plotting = [
    "matplotlib>=3.10.1",
]
dev = [
    "mypy>=1.6.0",
    "ruff>=0.1.14",
    "pytest>=7.3.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
extend-select = ["I", "N"]  # To check imports, naming conventions
extend-ignore = ["N818"] #  Ignore Exception should be named with an Error suffix
# For more info, see https://docs.astral.sh/ruff/rules/
